--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HermesChatApp.ViewModels.LoginViewModel
+@{    
     ViewData["Title"] = "Login";
 }
 <div class="container">
@@ -18,19 +19,22 @@
                         <div class="alert alert-success text-center">@TempData["SuccessfulRegister"]</div>
                     }
                     <form method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="mb-3">
-                            <label class="form-label">Username</label>
+                            <label asp-for="Username" class="form-label">Username</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="fas fa-user"></i></span>
-                                <input name="username" class="form-control" placeholder="Username" />
+                                <input asp-for="Username" class="form-control" placeholder="Username" />
                             </div>
+                            <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Password</label>
+                            <label asp-for="Password" class="form-label">Password</label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="fas fa-key"></i></span>
-                                <input name="password" type="password" class="form-control" placeholder="Password" />
+                                <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
                             </div>
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Login</button>
                     </form>
