--- a/Views/Chat/Index.cshtml
+++ b/Views/Chat/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Chat";
 }
-@section Css{
+@section Css {
     <link href="/css/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 }
 @section Scripts
 {
@@ -36,11 +37,12 @@
             <button id="startVideoCall" class="btn btn-success rounded-circle ms-2"><i class="fas fa-video"></i></button>
         </div>
         <div class="messages p-3 position-relative">
+            <div id="loadingSpinner" class="loading-spinner" style="display: none;"></div>
             <div id="typingIndicator" class="typing-indicator" style="display: none;">Typing...</div>
-            <ul id="messagesList" class="messages-list">
-                <div id="loadingSpinner" class="loading-spinner" style="display: none;"></div>
-            </ul>
-            <button id="scrollToBottomBtn" class="btn btn-sm btn-primary scroll-to-bottom" style="display: none;">↓</button>
+            <ul id="messagesList" class="messages-list"></ul>
+            <button id="scrollToBottomBtn" class="btn btn-sm btn-primary scroll-to-bottom" style="display: none;">
+                <i class="fas fa-arrow-down"></i>
+            </button>
         </div>
         <div class="input-area p-3 border-top d-flex align-items-center">
             <button id="emojiButton" class="btn btn-outline-secondary rounded-circle me-2"><i class="fas fa-smile"></i></button>
@@ -97,4 +99,3 @@
         </div>
     </div>
 </div>
-
