CHỈ MỚI ĐƯỢC HIỆU ỨNG TYPING, CÒN CÁC CÁI CÒN LẠI CHƯA ĐƯỢC

--- a/Views/Chat/Index.cshtml
+++ b/Views/Chat/Index.cshtml
@@ -37,10 +37,10 @@
             <button id="startVideoCall" class="btn btn-success rounded-circle ms-2"><i class="fas fa-video"></i></button>
         </div>
         <div class="messages p-3 position-relative">
-            <div id="loadingSpinner" class="loading-spinner" style="display: none;"></div>
-            <div id="typingIndicator" class="typing-indicator" style="display: none;">Typing...</div>
+            <div id="loadingSpinner" class="loading-spinner"></div>
+            <div id="typingIndicator" class="typing-indicator">Typing...</div>
             <ul id="messagesList" class="messages-list"></ul>
-            <button id="scrollToBottomBtn" class="btn btn-sm btn-primary scroll-to-bottom" style="display: none;">
+            <button id="scrollToBottomBtn" class="btn btn-sm btn-primary scroll-to-bottom">
                 <i class="fas fa-arrow-down"></i>
             </button>
         </div>
